@@ -8,6 +8,7 @@ What's New for OpenJPEG
 August 21, 2007
 + [FOD] Added support for Visual Studio 2005
 * [FOD] Robustified MJ2 codecs
+* [Parvatha] Solved problems with codec reading from image file directory when filename had more than one "." in name
 
 August 20, 2007
 + [FOD] Added support for the TGA file format in the codec
